fixed css not showing

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1529,7 +1529,7 @@ td {
 .final-btn {
   background-color: var(--bs-purple);
   color: var(--bs-yellow);
-  text-decoration: none;
+  text-decoration: none !important;
   padding: 5px 15px 8px;
   border-radius: 10px;
   font-weight: 500;
